feat: add header

--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+ <html lang="en">
+  <head> 
+   <meta charset="utf-8"/>
+    <link href="css/styleCV.css" type="text/css" rel="stylesheet"/>
+  </head>
+ <body>
+ <content>
+  <div id="cv">
+   <div id="header">
+    <h1 class="head"id="cv1">CV</h1>
+    <a title="avatar"><img src="images/avatar.png" alt="avatar" width="225" height="225"/></a>
+	<h2>
+   </div>
+	 <div id="nav">
+	 </div>
+<h2 id="cv2">Name and surname:</h2>
+<b>Tereshchenko Dmitrij</b>, <em>(Tsiareshchanka Dzmitrui)</em>
+<h3 id="cv3">Contacts for communication:</h3>
+<ul>
+<li>tel.№ +375-25-675-85-19 (Viber, Telegram)</li>
+<li><a href="https://vk.com/id52068784">VK/a></li>
+<li><a href="mailto: 0000egik@gmail.com">egik_no_design</a></li>
+</ul>
+<h4 id="cv4">Brief information about yourself:</h4>
+<ol>
+<li>I learn fast</li>
+<li>I am diligent</li>
+<li>I am observant</li>
+</ol>
+<h5>Skills:</h5>
+<ul>
+<li>Markdown</li>
+<li>HTML/CCS</li>
+</ul>
+  </div>
+</content>  
+ </body>
+ </html>
