fix: adjust social links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h3 id="cv3">Contacts for communication:</h3>
 <ul>
 <li>tel.№ +375-25-675-85-19 (Viber, Telegram)</li>
-<li><a href="https://vk.com/id52068784">VK/a></li>
+<li><a href="https://vk.com/id52068784">VK</li>
 <li><a href="mailto: 0000egik@gmail.com">egik_no_design</a></li>
 </ul>
 <h4 id="cv4">Brief information about yourself:</h4>
@@ -37,3 +37,4 @@
 </content>  
  </body>
  </html>
+
