feat: add footer

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
  <html lang="en">
   <head> 
    <meta charset="utf-8"/>
-    <link href="css/styleCV.css" type="text/css" rel="stylesheet"/>
+    <link href="styleCV.css" type="text/css" rel="stylesheet"/>
   </head>
  <body>
- <content>
+ <div id="content">
   <div id="cv">
    <div id="header">
     <h1 class="head"id="cv1">CV</h1>
-    <a title="avatar"><img src="images/avatar.png" alt="avatar" width="225" height="225"/></a>
+    <a title="avatar"><img src="avatar.png" alt="avatar" width="225" height="225"/></a>
 	<h2>
    </div>
 	 <div id="nav">
@@ -17,22 +17,52 @@
 <h2 id="cv2">Name and surname:</h2>
 <b>Tereshchenko Dmitrij</b>, <em>(Tsiareshchanka Dzmitrui)</em>
 <h3 id="cv3">Contacts for communication:</h3>
-<ul>
-<li>tel.№ +375-25-675-85-19 (Viber, Telegram)</li>
-<li><a href="https://vk.com/id52068784">VK</li>
-<li><a href="mailto: 0000egik@gmail.com">egik_no_design</a></li>
-</ul>
+ <pre>tel.№ +375-25-675-85-19 (Viber, Telegram)
+  <a href="https://vk.com/id52068784">VK</a>
+  <a href="mailto: 0000egik@gmail.com">egik_no_design</a></pre>
 <h4 id="cv4">Brief information about yourself:</h4>
-<ol>
-<li>I learn fast</li>
-<li>I am diligent</li>
-<li>I am observant</li>
-</ol>
+<pre>I learn fast 
+ I am diligent
+ I am observant</pre>
 <h5>Skills:</h5>
-<ul>
-<li>Markdown</li>
-<li>HTML/CCS</li>
-</ul>
+<pre>Markdown
+HTML/CCS</pre>
+<h6>Code examples:</h6>
+<pre>CSS:
+.bblock {
+     display: inline-table;
+     height: 250px;
+     width: 300px;
+     text-align: center;
+     vertical-align: middle;
+     border-style: solid;
+     border-width: 1px;
+     border-color: #939090;
+     border-radius: 30px;
+     padding: 0px;
+     margin-top: 10px;
+     margin-bottom: 10px;
+     overflow: hidden;
+     transition-property: border-color, border-radius, box-shadow;
+     transition-duration: .7s;
+     box-shadow: 0px 0px 0px 0px #ffffff;}
+</pre>
+<h6>Work experience:</h6>
+  <a href="http://greendekor.by/">completed project</a>
+<h6>Education:</h6>
+<br>high school
+<br>Polytechnic College
+<h6>English:</h6>
+A1
+<div id="footer">
+<br><a href="https://github.com/0000egik">Github</a>
+<br><a title="RSS" href="https://rs.school/js/"><img src="rolling.jpg" alt="RSS" width="537" height="240"/></a>
+<br>2021
+ </div>
+  </div>
+</div>  
+ </body>
+ </html>
   </div>
 </content>  
  </body>
