feat: add code comment

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="utf-8"/>
     <link href="styleCV.css" type="text/css" rel="stylesheet"/>
   </head>
+<!--This is not a layout, this is some kind of war with Github-->
  <body>
  <div id="content">
   <div id="cv">
