feat: add social links

--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
   <head> 
    <meta charset="utf-8"/>
     <link href="styleCV.css" type="text/css" rel="stylesheet"/>
+    <title>CV</title>
   </head>
-<!--This is not a layout, this is some kind of war with Github-->
  <body>
  <div id="content">
   <div id="cv">
    <div id="header">
-    <h1 class="head"id="cv1">CV</h1>
+    <h1 class="head" id="cv1">CV</h1>
     <a title="avatar"><img src="avatar.png" alt="avatar" width="225" height="225"/></a>
-	<h2>
    </div>
-	 <div id="nav">
-	 </div>
+     <div id="nav">
+      </div>
 <h2 id="cv2">Name and surname:</h2>
 <b>Tereshchenko Dmitrij</b>, <em>(Tsiareshchanka Dzmitrui)</em>
 <h3 id="cv3">Contacts for communication:</h3>
  <pre>tel.№ +375-25-675-85-19 (Viber, Telegram)
   <a href="https://vk.com/id52068784">VK</a>
-  <a href="mailto: 0000egik@gmail.com">egik_no_design</a></pre>
+  <a href="mailto:0000egik@gmail.com">egik_no_design</a></pre>
 <h4 id="cv4">Brief information about yourself:</h4>
 <pre>I learn fast 
  I am diligent
